Fix position sticky on iOS

--- a/resources/css/panels.pcss
+++ b/resources/css/panels.pcss
@@ -6,6 +6,7 @@
 
 .panel--left {
   flex: 0 1 auto;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 4;
