--- a/resources/css/tabs.pcss
+++ b/resources/css/tabs.pcss
@@ -132,6 +132,7 @@
 
 @media (max-width: 52.4375em) {
   .vp__tabs > div:first-child {
+    position: -webkit-sticky;
     position: sticky;
     top: calc((var(--video-player-max-width) * (var(--video-player-aspect-ratio))) - var(--video-tabs-icon-height));
     z-index: 2;
